version/0.18/_sources/api/solver/_autosummary/settings/methods.rst.txt
:orphan:

.. _methods:

methods
=======

.. autoclass:: ansys.fluent.core.solver.settings_232.methods.methods
    :show-inheritance:

.. rubric:: Attributes

======================================================================================================   =============================================================================================================================================================

Attribute                                                                                                                                                                                                                                                      Summary

======================================================================================================   =============================================================================================================================================================
:ref:`p_v_coupling <p_v_coupling>`                                                                                                                                                                                       Select the pressure velocity coupling scheme.

:ref:`flux_type <flux_type_2>`                                                                                                                                                                                                                    Enter the flux type.

:ref:`discretization_scheme <discretization_scheme>`                                                                                                                                                                                    'discretization_scheme' child.

:ref:`pseudo_time_method <pseudo_time_method>`                                                                                                                                                                                      Enter the pseudo time method menu.

:ref:`unsteady_1st_order <unsteady_1st_order>`                                                                                                                                                                     Enable/disable first-order unsteady solution model.

:ref:`unsteady_2nd_order <unsteady_2nd_order>`                                                                                                                                                                    Enable/disable second-order unsteady solution model.

:ref:`unsteady_2nd_order_bounded <unsteady_2nd_order_bounded>`                                                                                                                                               Enable/disable bounded second-order unsteady formulation.

:ref:`unsteady_global_time <unsteady_global_time>`                                                                                                                                                            Enable/disable unsteady global-time-step solution model.

:ref:`accelerated_non_iterative_time_marching <accelerated_non_iterative_time_marching>`                                                                                                                       Enable/disable accelerated non-iterative time marching.

:ref:`convergence_acceleration_for_stretched_meshes <convergence_acceleration_for_stretched_meshes_1>`       Enable convergence acceleration for stretched meshes to improve the convergence of the implicit density based solver on meshes with high cell stretching.

:ref:`expert <expert_1>`                                                                                                                                                                                                                            Enter expert menu.

:ref:`frozen_flux <frozen_flux>`                                                                                                                                                                           Enable/disable frozen flux formulation for transient flows.

:ref:`gradient_scheme <gradient_scheme>`                                                                                                                                                                                                          Set gradient scheme.

:ref:`high_order_term_relaxation <high_order_term_relaxation>`                                                                                                                                                                       Enter High Order Relaxation Menu.

:ref:`multiphase_numerics <multiphase_numerics>`                                                                                                                                                                           Enter the multiphase numerics options menu.

:ref:`nb_gradient_boundary_option <nb_gradient_boundary_option>`                                                                                                                                                                                     Set ggnb options.

:ref:`nita <nita>`                                                                                                                                                                                         Enable/disable Use of Noniterative Time Advancement Scheme.

:ref:`nita_expert_controls <nita_expert_controls>`                                                                                                                                                                                Enter the nita expert controls menu.

:ref:`overset <overset_1>`                                                                                                                                                                                                          Enter overset solver options menu.

:ref:`phase_based_vof_discretization <phase_based_vof_discretization>`                                                                                                                                                         'phase_based_vof_discretization' child.

:ref:`reduced_rank_extrapolation <reduced_rank_extrapolation>`                                                                                                                           Enable/disable Reduced Rank Extrapolation method to accelerate solution time.

:ref:`reduced_rank_extrapolation_options <reduced_rank_extrapolation_options>`                                                                                                                                                     Reduced Rank Extrapolation options.

:ref:`residual_smoothing <residual_smoothing>`                                                                                                                                                                 Set residual smoothing factor and number of iterations.

:ref:`vof_numerics <vof_numerics>`                                                                                                                                                                                                            Set VOF numeric options.

:ref:`warped_face_gradient_correction <warped_face_gradient_correction>`                                                                                                                                                   Enter warped-face-gradient-correction menu.

======================================================================================================   =============================================================================================================================================================

.. rubric:: Methods

========================================================================   ===========================================

Method                                                                                                         Summary

========================================================================   ===========================================
:ref:`set_solution_methods_to_default <set_solution_methods_to_default>`       Set solution methods to default values.

========================================================================   ===========================================

.. rubric:: Included in:

==========================   =====================

Parent                                     Summary

==========================   =====================
:ref:`solution <solution>`       'solution' child.

==========================   =====================

